--- a/动态强类型视图示例/Views/Home/Index.cshtml
+++ b/动态强类型视图示例/Views/Home/Index.cshtml
@@ -1,15 +1,35 @@
-﻿@using 动态强类型视图示例.Controllers
-@model List<HomeController.Blogs>
-@{
-    ViewBag.Title = "Index";
-}
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>vue导航菜单</title>
+    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div v-on:click.prevent id="btngroup" style="margin-left: 20px;margin-top: 20px" class="btn-group">
+        <div v-on:click=makeActive("按钮1") class="btn btn-primary">按钮1</div>
+        <div v-on:click=makeActive("按钮2") class="btn btn-success">按钮2</div>
+        <div v-on:click=makeActive("按钮3") class="btn btn-info">按钮3</div>
+        <br>
+        <p>当前选择的是:{{select}}</p>
+    </div>
+    <script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.onload = function () {
+    var demo = new Vue({
+        el: '#btngroup',
+        data: {
+            select: '按钮1'
+        },
+        methods: {
+            makeActive: function (item) {
+                this.select = item;
+            }
+        }
+    });
+}</script>
+    <script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.3/vue.js"></script>
 
-<h2>强类型视图</h2>
-<ul>
-    @foreach (var item in Model)
-    {
-<li>书名：@item.Name,描述：@item.Description</li>
-    }
-</ul>
-
-
+</body>
+</html>
